--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #CF4ECB;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.MuiButton-outlined:hover {
+  background-color: #CF4ECB;
+  border-color: #CF4ECB;
+  color : #fff
 }
